# kit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bacon.toml  dev.sh
.github/workflows/: publish.yml
app/: .env  Cargo.toml  database.db
app/cmd/: main.rs
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/pages/: Home.tsx
app/frontend/src/types/: inertia-props.ts
app/src/: bootstrap.rs  lib.rs  main.rs  routes.rs
app/src/actions/: todo_action.rs
app/src/config/: database.rs  mail.rs  mod.rs
app/src/controllers/: config_example.rs  home.rs  mod.rs  user.rs
app/src/middleware/: mod.rs
app/src/migrations/: m20251208_160100_create_users_table.rs  mod.rs
app/src/models/: mod.rs  todos.rs
app/src/models/entities/: todos.rs
docs/: README.md  middleware.md  workflows.md
framework/: Cargo.toml  README.md
framework/src/: app.rs  error.rs  lib.rs  server.rs
framework/src/config/: env.rs  mod.rs  repository.rs
framework/src/config/providers/: app.rs  mod.rs  server.rs
framework/src/container/: mod.rs  provider.rs
framework/src/database/: connection.rs  mod.rs  route_binding.rs
framework/src/http/: body.rs  extract.rs  form_request.rs  mod.rs  request.rs  response.rs
framework/src/inertia/: config.rs  context.rs  mod.rs  response.rs
framework/src/middleware/: registry.rs
framework/src/routing/: group.rs  macros.rs  mod.rs  router.rs
framework/src/schedule/: builder.rs  mod.rs  task.rs
framework/src/testing/: expect.rs  mod.rs
framework/src/workflow/: config.rs  context.rs  entities.rs  mod.rs  registry.rs  store.rs  types.rs
kit-cli/: Cargo.toml  README.md
kit-cli/src/: main.rs
kit-cli/src/commands/: db_sync.rs  generate_routes.rs  generate_types.rs  make_action.rs  make_controller.rs  make_error.rs  make_middleware.rs  make_migration.rs  make_request.rs  make_task.rs  migrate.rs  migrate_fresh.rs  migrate_rollback.rs  migrate_status.rs  mod.rs  new.rs  schedule_list.rs  schedule_run.rs  schedule_work.rs  serve.rs  web_run.rs  workflow_install.rs  workflow_work.rs
kit-cli/src/templates/: mod.rs
kit-cli/src/templates/files/: Cargo.toml.tpl  home_controller.rs.tpl  main.rs.tpl
kit-cli/src/templates/files/backend/: Cargo.toml.tpl  bootstrap.rs.tpl  main.rs.tpl  routes.rs.tpl  schedule.rs.tpl
kit-cli/src/templates/files/backend/actions/: example_action.rs.tpl
kit-cli/src/templates/files/backend/cmd/: main.rs.tpl
kit-cli/src/templates/files/backend/config/: database.rs.tpl  mod.rs.tpl
kit-cli/src/templates/files/backend/controllers/: auth.rs.tpl  dashboard.rs.tpl  home.rs.tpl
kit-cli/src/templates/files/docker/: Dockerfile.tpl
kit-cli/src/templates/files/frontend/src/pages/: Home.tsx.tpl
kit-cli/src/templates/files/frontend/src/types/: inertia-props.ts.tpl
kit-cli/src/templates/files/root/: env.example.tpl  env.tpl
kit-macros/: Cargo.toml
kit-macros/src/: domain_error.rs  form_request.rs  handler.rs  inertia.rs  injectable.rs  lib.rs  redirect.rs  request.rs  service.rs  test_macro.rs  workflow.rs  workflow_step.rs
