[package]
name = "app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
kit = { path = "../framework", package = "kit-rs" }
tokio = { version = "1", features = ["full"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls"] }
async-trait = "0.1"
dotenvy = "0.15"
