[package]
name = "kit-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Laravel-inspired web framework for Rust"
repository = "https://github.com/dayemsiddiqui/kit"
homepage = "https://github.com/dayemsiddiqui/kit"
keywords = ["web", "framework", "async", "http", "server"]
categories = ["web-programming::http-server", "asynchronous"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
matchit = "0.8"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kit-macros = { path = "../kit-macros", version = "0.1.6" }
