[package]
name = "kit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for scaffolding Kit web applications"
repository = "https://github.com/dayemsiddiqui/kit"
homepage = "https://github.com/dayemsiddiqui/kit"
keywords = ["cli", "scaffold", "kit", "web", "generator"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "kit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
ctrlc = "3.5"
