[package]
name = "kit-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for Kit framework"
repository = "https://github.com/dayemsiddiqui/kit"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
serde = { version = "1", features = ["derive"] }
serde_derive_internals = "0.29"
